<resources>
    <string name="app_name">Cute</string>
    <string name="api_v" translatable="false">V0001</string>
    <string name="app_subtext">Say what you want to say</string>
    <string name="back">Back</string>

    // SIGN IN, CONFIRMATION AND SIGN UP
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="sub_passwords">Sometimes, people choose too difficult password...</string>

    <string name="login">Login</string>
    <string name="password">Password</string>

    <string name="sign_in_sub_privacy_policy">By clicking \"Sign In\" button you agree our</string>
    <string name="sign_up_sub_privacy_policy">By clicking \"Sign Up\" button you agree our</string>
    <string name="privacy_policy">Privacy Policy</string>

    <string name="sign_up_subnickname">Create an amazing nickname</string>
    <string name="nickname">Nickname</string>

    <string name="sign_up_subpassword">Think for hard password</string>
    <string name="password_confirm">Password confirm</string>

    <string name="sign_up_subemail">Give us your e-mail</string>
    <string name="e_mail" translatable="false">E-mail</string>

    <string name="sign_in_success">Successfully signed in!</string>
    <string name="sign_up_success">Successfully signed up!</string>

    <string name="confirmation">Confirmation</string>
    <string name="confirmation_sub">We have send the confirmation code to</string>
    <string name="confirmation_edit">Enter code here</string>
    <string name="confirmation_button">Let me in!</string>
    <string name="confirmation_bottom">Can\'t receive?</string>
    <string name="confirmation_send_another">Send another</string>
    <string name="confirmation_send">Another code has been sended</string>

    // Bottom navigation
    <string name="explore">Explore</string>
    <string name="messages">Messages</string>
    <string name="no_internet">Waiting for network...</string>

    <string name="account">Account</string>

    // Banned
    <string name="banned_title">You are banned</string>
    <string name="banned_text">Oops! Looks like your account is banned :(</string>
    <string name="banned_button">Sign up</string>

    // Block
    <string name="bl_title">Cute is not available</string>
    <string name="bl_text">Cute is not available at the moment.</string>

    // Alert dialog
    <string name="adialog_yes">OK</string>
    <string name="adialog_no">Cancel</string>
    <string name="developer">Developer</string>
    <string name="debug_menu">Debug</string>

    // Dialogs
    <string name="no_conv_title">Quite and empty...</string>
    <string name="no_conv_text">Oops! Looks like you haven\'t any conversations...</string>
    <string name="dialogs_error_title">Error loading chats</string>
    <string name="dialogs_error_text">Can\'t load chats. Try to check your internet connection.</string>
    <string name="dialogs_error_button">Retry</string>

    <string name="create_conv_text">Name</string>
    <string name="create_conv_description">Description</string>

    <string name="create_conv_title">Create a conversation</string>
    <string name="create_conv_button">Create</string>
    <string name="create_success">New conversation created</string>


    // Conversation
    <string name="your_message">Your message</string>
    <string name="wait_for_record">Hold your finger to record a voice message</string>

    <string name="chat_search">Search for chats</string>
    <string name="chat_join_title">Join %s%</string>
    <string name="chat_join_text">Are you sure you want to join this chat?</string>

    // INFO
    <string name="members">members</string>
    <string name="edit">edit</string>
    <string name="on_notif">Enable notifications</string>
    <string name="leave_title">Leave the conversation</string>
    <string name="leave_text">Do you want to leave the conversation?</string>
    <string name="clear_title">Clear all messages</string>
    <string name="clear_text">You will clear all messages for yourself, and others will continue to see them.</string>


    <string name="logout_title">Logout</string>
    <string name="logout_text">Do you want to logout?</string>
    <string name="saved_to_gallery">Saved to gallery</string>

    // Account
    <string name="edit_profile">Edit profile</string>
    <string name="bio">Bio</string>
    <string name="status">Status</string>
    <string name="surname">Surname</string>
    <string name="no_status">i like pineapples</string>
    <string name="save_profile">Save</string>

    // NOTIFICATIONS

    //SETTINGS
    <string name="interfc">Interface</string>
    <string name="night">Dark mode</string>
    <string name="change_pass">Change password</string>

    <string name="pass_old">Old password</string>
    <string name="pass_new">New password</string>
    <string name="pass_success">Successfully changed your password</string>
    <string name="pass_error">Error</string>
    <string name="pass_dmatch">Passwords don\'t match</string>
    <string name="logout">Logout</string>
    <string name="version">Version</string>

    <string name="edit_conv">Edit chat</string>


    // Errors
    <string name="err_no_internet">No internet connection</string>
    <string name="err_not_sended">Not sent</string>
    <string name="sending">Sending...</string>
    <string name="err_json">Wrong JSON answer</string>
    <string name="err_unknown">Unknown error</string>
    <string name="err_confirm">You must confirm your account</string>
    <string name="err_messages_title">Error loading messages</string>
    <string name="err_messages_text">An error occured while loading chat messages</string>

    // Error codes
    <string name="errcode_AM000_1">Already authorized!</string>

    <string name="errcode_AM001_1">Invalid login</string>
    <string name="errcode_AM001_2">Invalid e-mail</string>
    <string name="errcode_AM001_3">Invalid password</string>
    <string name="errcode_AM001_3_1">Passwords don\'t match</string>
    <string name="errcode_AM001_4">Already registered</string>
    <string name="errcode_AM001_5">Unknown database error</string>

    <string name="errcode_AM002_1">Incorrect login</string>
    <string name="errcode_AM002_2">Incorrect password</string>
    <string name="errcode_AM002_2_3">Incorrect login or password</string>
    <string name="errcode_AM002_4">Invalid password</string>
    <string name="errcode_AM002_5">Error oppening session</string>

    <string name="errcode_AM003_1">Active session doesn\'t exist</string>
    <string name="errcode_AM003_2">Matched account doesn\'t exist</string>

    <string name="errcode_AM004_1">Can\'t find accounts</string>

    <string name="errcode_AM005_1">Invalid active account</string>
    <string name="errcode_AM005_2">Unknown error whith data writing</string>

    <string name="errcode_AM006_1">Wrong confirmation code</string>
    <string name="errcode_AM006_2">Unknown confirmation error</string>

    <string name="errcode_AM007_1">Wrong confirmation code</string>
    <string name="errcode_AM007_2">Can\'t find an account</string>
    <string name="errcode_AM007_3">Wrong password</string>
    <string name="errcode_AM007_4">Incorrect password</string>
    <string name="errcode_AM007_5">Unknown password change error</string>

    <string name="errcode_AM008_1">Active session doesn\'t exists</string>
    <string name="errcode_AM008_2">Account is already confirmed</string>
    <string name="errcode_AM008_3">Unknown send error</string>

    <string name="errcode_CM000_1">You are already logged in</string>

    <string name="errcode_CM001_1">Incorrect conversation name</string>
    <string name="errcode_CM001_2">Incorrect description</string>
    <string name="errcode_CM001_3">Incorrect conversation type</string>
    <string name="errcode_CM001_4">Unknown creating error</string>

    <string name="errcode_CM002_1">Can\'t find conversation</string>

    <string name="errcode_CM003_1">You haven\'t conversations</string>

    <string name="errcode_CMS001_1">You are not a member!</string>
    <string name="errcode_CMS001_2">Access denied</string>
    <string name="errcode_CMS001_3">Incorrect message text</string>
    <string name="errcode_CMS001_4">Unknown message send error</string>

    <string name="errcode_CMS002_1">Message doesn\'t exists</string>
    <string name="errcode_CMS002_2">You can\'t edit that message</string>
    <string name="errcode_CMS002_3">You are not a member!</string>
    <string name="errcode_CMS002_4">New message is incorrect</string>
    <string name="errcode_CMS002_5">Unknown error editing message</string>

    <string name="errcode_CMS003_1">Unknown system error</string>

    <string name="errcode_CMS004_1">You are not a member</string>
    <string name="errcode_CMS004_2">Access denied</string>
    <string name="errcode_CMS004_3">Unknown error receiving messages</string>

    <string name="errcode_CMM001_1">Conversation doesn\'t exists</string>
    <string name="errcode_CMM001_2">Already member</string>
    <string name="errcode_CMM001_3">Incorrect role</string>
    <string name="errcode_CMM001_4">Unknown error</string>

    <string name="errcode_CMM002_1">Conversation doesn\'t exists</string>
    <string name="errcode_CMM002_2">Not a member</string>
    <string name="errcode_CMM002_3">Unknown error</string>


    <string name="title_activity_navigation" translatable="false">Navigation</string>
    <string name="title_home" translatable="false">Home</string>
    <string name="title_dashboard" translatable="false">Dashboard</string>
    <string name="title_notifications" translatable="false">Notifications</string>
    <string name="title_activity_main" translatable="false">MainActivity</string>
    <string name="title_activity_account" translatable="false">Account</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment" translatable="false">Hello first fragment</string>
    <string name="hello_second_fragment" translatable="false">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_settings" translatable="false">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header" translatable="false">Messages</string>
    <string name="sync_header" translatable="false">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title" translatable="false">Your signature</string>
    <string name="reply_title" translatable="false">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title" translatable="false">Sync email periodically</string>
    <string name="attachment_title" translatable="false">Download incoming attachments</string>
    <string name="attachment_summary_on" translatable="false">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off" translatable="false">Only download attachments when manually requested</string>
    <string name="password_warning">Changing the password will automatically reset all active sessions</string>
    <string name="signout">Sign out</string>
    <string name="perms_title">Permissions</string>
    <string name="perms_text">For Cute to work on your device, it requires several normal permissions.</string>
    <string name="perms_btn">Grant permissions</string>
    <string name="conv_nocon">waiting for network</string>

</resources>
