<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".activities.Signup">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:layout_weight="0"
                    android:foregroundGravity="center_horizontal"
                    app:srcCompat="@drawable/icon_signup" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="20dp"
                    android:layout_weight="0"
                    android:fontFamily="@font/montserrat"
                    android:gravity="center"
                    android:text="@string/sign_up"
                    android:textColor="@color/colorMainText"
                    android:textSize="40sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="40dp"
                android:fontFamily="@font/montserrat"
                android:gravity="center"
                android:text="@string/sign_up_subnickname" />

            <EditText
                android:id="@+id/nickname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="40dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text_passive"
                android:drawableLeft="@drawable/icon_person"
                android:drawablePadding="10dp"
                android:ems="10"
                android:fontFamily="@font/montserrat"
                android:foregroundGravity="left|clip_horizontal"
                android:hint="@string/nickname"
                android:inputType="textPersonName"
                android:paddingLeft="10dp"
                android:paddingTop="7dp"
                android:paddingBottom="7dp"
                android:textColor="@color/colorText" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="40dp"
                android:fontFamily="@font/montserrat"
                android:gravity="center"
                android:text="@string/sign_up_subpassword" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="40dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text_passive"
                android:drawableLeft="@drawable/icon_pass"
                android:drawablePadding="10dp"
                android:ems="10"
                android:fontFamily="@font/montserrat"
                android:foregroundGravity="left|clip_horizontal"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingLeft="10dp"
                android:paddingTop="7dp"
                android:paddingBottom="7dp"
                android:textColor="@color/colorText" />

            <EditText
                android:id="@+id/password_confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="40dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text_passive"
                android:drawableLeft="@drawable/icon_pass"
                android:drawablePadding="10dp"
                android:ems="10"
                android:fontFamily="@font/montserrat"
                android:foregroundGravity="left|clip_horizontal"
                android:hint="@string/password_confirm"
                android:inputType="textPassword"
                android:paddingLeft="10dp"
                android:paddingTop="7dp"
                android:paddingBottom="7dp"
                android:textColor="@color/colorText" />

            <TextView
                android:id="@+id/email_sub"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="40dp"
                android:fontFamily="@font/montserrat"
                android:gravity="center"
                android:text="@string/sign_up_subemail" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="40dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text_passive"
                android:drawableLeft="@drawable/icon_email"
                android:drawablePadding="10dp"
                android:ems="10"
                android:fontFamily="@font/montserrat"
                android:foregroundGravity="left|clip_horizontal"
                android:hint="@string/e_mail"
                android:inputType="textEmailAddress"
                android:paddingLeft="10dp"
                android:paddingTop="7dp"
                android:paddingBottom="7dp"
                android:textColor="@color/colorText" />

            <Button
                android:id="@+id/button6"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="40dp"
                android:background="@drawable/button_active"
                android:fontFamily="@font/montserratmedium"
                android:onClick="signUpButton"
                android:text="@string/sign_up"
                android:textColor="@color/colorWhite"
                android:textSize="18sp" />

            <Button
                android:id="@+id/button7"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="40dp"
                android:background="@drawable/button_passive"
                android:fontFamily="@font/montserrat"
                android:onClick="back"
                android:text="@string/back"
                android:textColor="@color/colorText"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="40dp"
                    android:fontFamily="@font/montserrat"
                    android:gravity="center"
                    android:text="@string/sign_up_sub_privacy_policy"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:fontFamily="@font/montserratmedium"
                    android:gravity="center"
                    android:text="@string/privacy_policy"
                    android:textColor="@color/colorMainText"
                    android:textSize="14sp" />


            </LinearLayout>


        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>