<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".activities.PasswordChange">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:paddingHorizontal="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="left"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView9"
                    android:layout_width="135dp"
                    android:layout_height="75dp"
                    android:layout_marginBottom="10dp"
                    app:srcCompat="@drawable/icon_logo_text" />
            </LinearLayout>

            <EditText
                android:id="@+id/oldpass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_passive"
                android:drawableLeft="@drawable/icon_account"
                android:drawablePadding="10dp"
                android:drawableTint="@color/colorEditTextIcon"
                android:ems="10"
                android:fontFamily="@font/montserrat"
                android:foregroundGravity="left|clip_horizontal"
                android:hint="@string/pass_old"
                android:inputType="textPassword"
                android:paddingLeft="10dp"
                android:paddingTop="7dp"
                android:paddingBottom="7dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="91dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text_passive_double"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:drawableLeft="@drawable/icon_pass"
                    android:drawablePadding="10dp"
                    android:drawableTint="@color/colorEditTextIcon"
                    android:ems="10"
                    android:fontFamily="@font/montserrat"
                    android:foregroundGravity="left|clip_horizontal"
                    android:hint="@string/pass_new"
                    android:inputType="textVisiblePassword"
                    android:paddingLeft="10dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp" />

                <View
                    android:id="@+id/divider"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorEditTextOutline" />

                <EditText
                    android:id="@+id/passonf"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:drawableLeft="@drawable/icon_pass"
                    android:drawablePadding="10dp"
                    android:drawableTint="@color/colorEditTextIcon"
                    android:ems="10"
                    android:fontFamily="@font/montserrat"
                    android:foregroundGravity="left|clip_horizontal"
                    android:hint="@string/password_confirm"
                    android:inputType="textVisiblePassword"
                    android:paddingLeft="10dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp" />

            </LinearLayout>

            <Button
                android:id="@+id/button3"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_active"
                android:fontFamily="@font/montserrat"
                android:onClick="changePassword"
                android:text="@string/change_pass"
                android:textColor="@color/colorMainText"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/montserrat"
                android:gravity="center"
                android:text="@string/password_warning"
                android:textSize="12sp" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>